Add session times and Planday training department
